# mcp-context-forge

./: .bumpversion.cfg  .dockerignore  .env.ce.example  .env.example  .flake8  .gitignore  .htmlhintrc  .pre-commit-config.yaml  .pre-commit-lite.yaml  .pylintrc  .travis.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Containerfile  Containerfile.lite  Containerfile.scratch  DEVELOPING.md  MANIFEST.in  MIGRATION-0.7.0.md  MULTIPLATFORM.md  Makefile  PROJECT_INDEX.json  PROJECT_INDEX.md  README.md  SECURITY.md  biome.json  compose.upgrade.yml  docker-compose-debug.yml  docker-compose-performance.yml  docker-compose-verbose-logging.yml  docker-compose.mariadb.yml  docker-compose.yml  enable_payload_logging.md  mcp-catalog.yml  package-lock.json  package.json  pyproject.toml  semgrep.yml  smoketest.py
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: .renovate.json5  CODEOWNERS  copilot-instructions.md  pull_request_template.md
.rovodev/: prompts.yml
.serena/: project.yml
_bmad-output/: project-context.md
charts/: AGENTS.md  README.md
deployment/: AGENTS.md  CHARTS.md  README.md
docs/: api-contracts-gateway-core.md  architecture.md  config.schema.json  data-models-gateway-core.md  development-guide.md  index.md  integration-architecture.md  project-overview.md  project-parts.json  (+2 more)
mcp-servers/python/bitbucket-server/: Containerfile  Makefile  README.md  pyproject.toml
mcp-servers/python/bitbucket-server/src/bitbucket_mcp_server/: __init__.py  server_fastmcp.py
mcp-servers/python/bitbucket-server/tests/: test_server.py
(+403 files in other folders)
