[project]
name = "bitbucket-mcp-server"
version = "0.1.0"
description = "Bitbucket Cloud MCP Server — repositories, PRs, pipelines, and code search"
authors = [
  { name = "MCP Context Forge", email = "admin@apollosai.dev" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.0.0",
  "mcp>=1.0.0",
  "orjson>=3.11.5",
  "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "mypy>=1.5.0",
  "ruff>=0.0.290",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bitbucket_mcp_server"]

[project.scripts]
bitbucket_mcp_server = "bitbucket_mcp_server.server_fastmcp:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=bitbucket_mcp_server --cov-report=term-missing"
